# trainer

./: .pipup.yaml  .pyup.yml  LICENSE  Procfile  README.md  edits.xml  project.toml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/actions/setup-python-environment/: action.yml
.github/workflows/: ci.yml  copy-secrets.yml  deploy.yml  release.yml  tag_release.yml  update.yml
cbng_trainer/: __init__.py  api.py  cli.py
cbng_trainer/common/: __init__.py  config.py  consts.py  docker.py  files.py  kubernetes.py  models.py  steps.py  toolforge.py  utils.py
cbng_trainer/comparator/: comparator.py  core.py  plots.py  results.py  sampler.py
cbng_trainer/trainer/: __init__.py  reviewed.py
deployment/: entrypoint.sh  fabfile.py  service.template  toolforge.yaml
