[project]
name = "cbng-trainer"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12,<3.14" # T408108
dependencies = [
    "click",
    "kubernetes",
    "requests",
    "aiohttp",
    "aiohttp-retry",
    "toolforge_weld",
    "gunicorn",
]

[tool.poetry.group.test.dependencies]
tox = "4.31.0"
tox-current-env = "0.0.16"
black = "25.9.0"
ruff = "0.14.2"
bandit = "1.8.6"

[tool.ruff]
exclude = ['*/migrations/*', 've/*', '.tox/*']
line-length = 120

[tool.black]
line-length = 120
extend-exclude = '''
(
  ^/ve
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
