[project]
name = "cbng-trainer"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12" # T408108
dependencies = [
    "click",
    "kubernetes",
    "requests",
    "aiohttp",
    "aiohttp-retry",
    "toolforge_weld",
    "gunicorn",
]

[tool.poetry.group.test.dependencies]
tox = "*"
tox-current-env = "*"
black = "*"
ruff = "*"
bandit = "*"

[tool.ruff]
exclude = ['*/migrations/*', 've/*', '.tox/*']
line-length = 120

[tool.black]
line-length = 120
extend-exclude = '''
(
  ^/ve
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
